<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.paulribe.memowords.MainActivity">
    <item
        android:id="@+id/learningFragmentButton"
        android:icon="@drawable/baseline_announcement_white_24dp"
        android:title="@string/bottom_navigation_menu_word_learn"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newWordFragment"
        android:icon="@drawable/baseline_library_add_white_18dp"
        android:title="@string/bottom_navigation_menu_word_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/SecondFragment"
        android:icon="@drawable/baseline_list_white_24dp"
        android:title="@string/bottom_navigation_menu_word_list"
        app:showAsAction="ifRoom" />
</menu>